[package]
name = "todo-backend-rocket-rust"
version = "0.1.0"
authors = ["John Hume <duelin.markers@gmail.com>"]

[dependencies]
rocket = "0.4.10"
rocket_codegen = "0.4.10"
rocket_cors = "0.5.2"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
diesel = { version = "0.16.0", features = ["postgres"] }
diesel_codegen = { version = "0.16.0", features = ["postgres"] }
dotenv = "0.9.0"
r2d2 = "0.7.4"
r2d2-diesel = "0.16.0"
r2d2_postgres = "0.13.0"

[dependencies.rocket_contrib]
version = "0.4.10"
default-features = false
features = ["json"]
